--- a/config/default.yaml
+++ b/config/default.yaml
@@ -19,6 +19,9 @@ Uwb_Location:
       baud_rate: 115200           # 波特率
       timeout_ms: 20              # 读取超时时间 (防止串口无数据时程序卡死)
 
+    NLOS:
+      nlos_q_threshold: 6.0            # NLOS 判定阈值 (根据实际环境调整)
+
     # ==========================
     # 3. 基站 (Anchors) 配置
     # ==========================
