--- a/config/default.yaml
+++ b/config/default.yaml
@@ -24,7 +24,7 @@ uwb_imu_fusion:
     # ==========================
 
     NLOS:
-      nlos_q_threshold: 6.0            # NLOS 判定阈值 (根据实际环境调整)
+      nlos_q_threshold: 8.0            # NLOS 判定阈值 (根据实际环境调整)
 
     algorithm_type: "eskf"  # 可选：eskf / graph
 
@@ -35,8 +35,8 @@ uwb_imu_fusion:
     eskf:
       acc_noise_std: 0.1
       gyro_noise_std: 0.05
-      acc_bias_walk_std: 1e-4
-      gyro_bias_walk_std: 1e-5
+      acc_bias_walk_std: 0.01
+      gyro_bias_walk_std: 0.01
       uwb_noise_std: 0.15
 
     # ==========================
