--- a/config/default.yaml
+++ b/config/default.yaml
@@ -41,8 +41,9 @@ uwb_imu_fusion:
       # 【新增】Bias 限幅阈值
       acc_bias_limit: 0.1        # 加速度计偏置限幅，单位：m/s²
       gyro_bias_limit: 0.1       # 陀螺仪偏置 限幅，单位：rad/s
-      ZUPT_limit: 0.05           # 速度限幅，单位：m/s
+      ZUPT_acc_limit: 0.05           # 速度限幅，单位：m/s
       ZIHR_limit: 0.01          # 角速度限幅，单位：rad
+      ZUPT_velocity_limit: 0.3         # ZUPT 速度观测值，单位：m/s
 
 
     # ==========================
