调整ESKF算法中的噪声标准差以优化性能，并在IMU对齐过程中添加调试输出以便于分析。

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -33,11 +33,11 @@ uwb_imu_fusion:
       show_anchors: true
 
     eskf:
-      acc_noise_std: 0.1
-      gyro_noise_std: 0.05
-      acc_bias_walk_std: 0.01
-      gyro_bias_walk_std: 0.01
-      uwb_noise_std: 0.20
+      acc_noise_std: 0.01
+      gyro_noise_std: 1.5e-04
+      acc_bias_walk_std: 2.0e-04
+      gyro_bias_walk_std: 4.0e-04
+      uwb_noise_std: 0.25
       # 【新增】Bias 限幅阈值
       acc_bias_limit: 0.1        # 加速度计偏置限幅，单位：m/s²
       gyro_bias_limit: 0.1       # 陀螺仪偏置 限幅，单位：rad/s
