添加对robot_msgs的依赖，并提供使用示例文档

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ find_package(tf2_ros REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(ament_index_cpp REQUIRED)
+find_package(robot_msgs REQUIRED)
 
 # 查找Eigen3
 find_package(Eigen3 REQUIRED)
@@ -89,6 +90,7 @@ ament_target_dependencies(${PROJECT_NAME}_node
   tf2
   tf2_geometry_msgs
   ament_index_cpp
+  robot_msgs
 )
 
 # 链接自定义消息
