--- a/package.xml
+++ b/package.xml
@@ -17,6 +17,9 @@
   <depend>tf2_ros</depend>
   <depend>tf2</depend>
   <depend>tf2_geometry_msgs</depend>
+  
+  <!-- 自定义消息依赖 -->
+  <depend>robot_msgs</depend>
 
   <!-- 参数文件支持 -->
   <depend>rcl_yaml_param_parser</depend>
