添加轨迹可视化功能，支持显示滤波和原始三边定位轨迹，更新配置文件以启用新选项

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -31,6 +31,8 @@ uwb_imu_fusion:
     visualization:
       show_raw_uwb_position: true
       show_anchors: true
+      show_filtered_traj: true
+      show_raw_traj: true
 
     eskf:
       acc_noise_std: 0.001
